# HuskyFetch

./: .gitignore  README.md  database.json  index.html  pyproject.toml  requirements.txt  webserver.py
modules/: course.py  scraper.py
modules/scrapers/: __init__.py  abstract_scraper.py  class_scraper.py  google_maps_scraper.py  huskylink_scraper.py  uwcalendar_scraper.py
static/css/: style.css
static/js/: DogRunGif.js  main.js  range.js  sample.json  scroller.js
templates/: index.html
